fix legend width and collapsing chart

--- a/thirdeye/thirdeye-frontend/app/styles/components/rootcause-chart.scss
+++ b/thirdeye/thirdeye-frontend/app/styles/components/rootcause-chart.scss
@@ -1,3 +1,4 @@
 .rootcause-chart {
   flex-grow: 1;
+  min-height: 400px;
 }
